# zeus

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES.md  remote_env.sh
.agent/: instructions.md
.agent/workflows/: git-commit.md  remote-dev.md
cmake/: ZeusConfig.cmake.in
examples/: README.md  ackley.hpp  fit_dijet_spectrum.cu  gaussian.hpp  goldstein_price.hpp  himmelblau.hpp  metaprogramming_t.cpp  nn.hpp  optimization_utils.cc  optimization_utils.hpp  optimize_ackley.cu  optimize_gaussian_nn.cu  optimize_goldstein_price.cu  optimize_himmelblau.cu  optimize_rastrigin.cu  optimize_rosenbrock.cu  rastrigin.hpp  rosenbrock.hpp  sample_functions.hpp  stateless_funs.cpp  tutorial.md
examples/simulation/: README.md  sim.py
examples/simulation/fitting/: CMakeLists.txt  LogLikelihood.h  README.md  use_loglikelihood.cpp
include/: bfgs.cuh  bfgs_common.cuh  bfgs_parallel.cuh  bfgs_sequential.cuh  context.cuh  context.hpp  cuda_buffer.cuh  cuda_buffer.hpp  device_matrix.cuh  duals.cuh  exception.hpp  fun.h  matrix.cuh  matrix.hpp  pso.cuh  traits.hpp  util.cuh  util.hpp  utils.cuh  zeus.cuh
src/: bfgs.cu  cuda_buffer.cu  duals.cu  exception.cpp  pso.cu  util.cpp  utils.cu
test/: README.md  bad_objectives.cu  bad_objectives_concepts.cu  bfgs_tests.cu  catch_main.cpp  cuda_buffer_tests.cu  device_matrix_tests.cu  dual_tests.cu  fun_tests.cu  matrix_tests.cu  non_null_tests.cu  pso_tests.cu  util_tests.cu
testing/: .test_main.cu.swp  README.md  bad_objectives.cu  bfgs_test.cu  bfgs_tests.cu  cuda_buffer_tests.cu  device_matrix_tests.cu  dual_tests.cu  fun_tests.cu  matrix_tests.cu  pso_tests.cu  test_main.cu  util_tests.cu
